--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.15.2",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^22.4.3",
     "cross-env": "^3.2.4",
+    "eslint": "^5.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "glob-all": "^3.1.0",
     "jest": "^22.4.3",
     "jquery": "^3.3.1",
