--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,17 +4,22 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "sourceType": "module"
+        "sourceType": "module",
+        "parser": "babel-eslint"
     },
     "env": {
         "es6": true,
         "node": true
     },
+    "extends": [
+        "plugin:vue/strongly-recommended"
+    ],
     "plugins": [
         "import",
         "node",
         "promise",
-        "standard"
+        "standard",
+        "vue"
     ],
     "globals": {
         "document": false,
