--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "production": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch-prod": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "test": "jest",
-    "watch:test": "jest --watch --bail"
+    "watch:test": "jest --watch --bail",
+    "lint": "eslint --ext .js,.vue resources/assets/js tests",
+    "lint-autofix": "eslint --ext .js,.vue resources/assets/js tests --fix"
   },
   "dependencies": {
     "laravel-echo-server": "^1.3.6"
